--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,14 @@
     "module": "ESNext",
     "composite": true,
     "incremental": true,
-    "lib": ["ESNext"],
+    "lib": [
+      "ESNext"
+    ],
     "importHelpers": true,
     "declarationMap": true,
     "declaration": true,
     "emitDeclarationOnly": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
@@ -30,5 +32,7 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["./src"]
+  "include": [
+    "./src"
+  ]
 }
