--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getgreenline/react-native-fast-image",
-  "version": "8.6.0",
+  "version": "8.6.1",
   "description": "🚩 FastImage, performant React Native image component.",
   "keywords": [
     "cache",
@@ -31,7 +31,7 @@
     "RNFastImage.podspec"
   ],
   "scripts": {
-    "build": "dv-scripts build && cp src/index.js.flow dist/index.js.flow",
+    "build": "tsc",
     "lint": "dv-scripts lint",
     "release": "dv-scripts release",
     "test": "dv-scripts test"
