--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "lib": [
       "ESNext"
     ],
+    "allowJs": true,
     "importHelpers": true,
     "declarationMap": true,
     "declaration": true,
@@ -22,7 +23,6 @@
     "noUnusedLocals": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "Node",
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
